# cog

./: .gitignore  README.md
cog-agent/: Cargo.toml
cog-agent/src/: acp.rs  lib.rs  main.rs  rpc.rs
cog-agent/tests/: acp_stub.rs
cog-e2e-tests/: .gitignore  Cargo.toml  README.md  run_chat_persistence_test.sh  run_test.sh  run_visual_test.sh  smoke_test.sh
cog-e2e-tests/fixtures/: visual_test_data.lua
cog-e2e-tests/nvim_test_config/: init.lua  thinking_stream_test_init.lua  thinking_test_init.lua  visual_test_init.lua
cog-e2e-tests/step_files/: chat_session1.yaml  chat_session2.yaml  edit_file.yaml  smoke_test.yaml  thinking_stream_test.yaml  thinking_test.yaml  visual_chat_test.yaml
cog-e2e-tests/test_artifacts/20260201-215340/: step-001-screen.json  step-002-screen.txt  trace.json
cog-e2e-tests/tests/: edit_file_test.rs
cog.nvim/lua/cog/: backend.lua  config.lua  init.lua  session.lua  vendor.lua
cog.nvim/lua/cog/buffer/: apply.lua  init.lua  tracker.lua
cog.nvim/lua/cog/tools/: apply_edits.lua  grep.lua  init.lua  lsp.lua
cog.nvim/lua/cog/ui/: buttons.lua  chat.lua  diff.lua  highlights.lua  icons.lua  init.lua  permission.lua  progress.lua  split.lua
cog.nvim/plugin/: cog.vim
scripts/dev/: README.md  compare-snapshots.sh  nvim-cog-acp-stub.sh  nvim-cog-acp-stub.vim  nvim-cog-e2e.sh  nvim-cog-e2e.vim  nvim-cog-headless-smoke.sh  nvim-cog-headless-smoke.vim  nvim-cog-smoke.sh  nvim-cog-smoke.vim  verify.sh
