[package]
name = "cog-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
termwright = "0.1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[test]]
name = "edit_file"
path = "tests/edit_file_test.rs"
harness = false
